Refatora o projeto de sala para consutóltio
Se aceito esse commit, inicia a refatoração do projeto de sala de
reuniões para sublocação de consultórios

closes #1

--- a/src/app/room-details/room-details.component.html
+++ b/src/app/room-details/room-details.component.html
@@ -1,18 +1,18 @@
-<h2>Room Details</h2> 
+<h2>Detalhes do Consultório</h2>
 
 <hr/>
 <div *ngIf="room">
   <div>
-    <label><b>Name </b></label> {{room.name}}
+    <label><b> Profissional </b></label> {{room.name}}
   </div>
   <div>
-    <label><b> date</b></label> {{room.date}}
+    <label><b> Data da Sublocação</b></label> {{room.date}}
   </div>
   <div>
-    <label><b> startHour</b></label> {{room.startHour}}
+    <label><b> Horário da Entrada </b></label> {{room.startHour}}
   </div>
     <div>
-    <label><b> endHour</b></label> {{room.endHour}}
+    <label><b> Horario da Saída</b></label> {{room.endHour}}
   </div>
 </div>
 
