--- a/src/app/room-list/room-list.component.html
+++ b/src/app/room-list/room-list.component.html
@@ -1,16 +1,16 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
-      <h2>Room List</h2>
+      <h2>Lista de Consultórios</h2>
     </div>
     <div class="panel-body">
       <table class="table table-striped">
         <thead>
           <tr>
-            <th>name</th>
-            <th>date</th>
-            <th>startHour</th>
-            <th>endHour</th>
-            <th>Actions</th>
+            <th>Profissional</th>
+            <th>Data da Sublocação</th>
+            <th>Horário de Entrada</th>
+            <th>Horário de Saída</th>
+            <th>Ações </th>
           </tr>
         </thead>
         <tbody>
@@ -28,4 +28,3 @@
       </table>
     </div>
   </div>
-  
