Pequenos reparos e add img

--- a/src/app/room-list/room-list.component.html
+++ b/src/app/room-list/room-list.component.html
@@ -10,7 +10,7 @@
             <th>Data da Sublocação</th>
             <th>Horário de Entrada</th>
             <th>Horário de Saída</th>
-            <th>Ações </th>
+            <th>Valor</th>
           </tr>
         </thead>
         <tbody>
