Insere imagem na aplicação e contextualiza
Se aceito este commit insere a imagem na aplicação de contextualiza os
nomes com a imagem, indicando que se trata de uma aplicação de
sublocação de consultórios.

closes #2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-        <a routerLink="employees" class="nav-link" routerLinkActive="active">Room List</a>
+        <a routerLink="employees" class="nav-link" routerLinkActive="active">Consultórios</a>
     </li>
     <li class="nav-item">
-        <a routerLink="add" class="nav-link" routerLinkActive="active">Add Room</a>
+        <a routerLink="add" class="nav-link" routerLinkActive="active">Sublocar</a>
     </li>
   </ul>
 </nav>
@@ -15,7 +15,9 @@
   <hr>
   <div class="card">
     <div class="card-body">
-  <router-outlet></router-outlet>
+      <img src="assets/imagens/consultorio2.jpg"  alt="image">
+
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
