--- a/src/app/room-details/room-details.component.html
+++ b/src/app/room-details/room-details.component.html
@@ -6,16 +6,19 @@
     <label><b> Profissional </b></label> {{room.name}}
   </div>
   <div>
+    <label><b> Sala </b></label> {{room.numero}}
+  </div>
+  <div>
     <label><b> Data da Sublocação</b></label> {{room.date}}
   </div>
   <div>
     <label><b> Horário da Entrada </b></label> {{room.startHour}}
   </div>
     <div>
-    <label><b> Horario da Saída</b></label> {{room.endHour}}
+    <label><b> Horário da Saída</b></label> {{room.endHour}}
   </div>
 </div>
 
 <br>
 <br>
-<button (click)="list()" class="btn btn-primary">Back to Room List</button><br>
+<button (click)="list()" class="btn btn-primary">Volte para Lista</button><br>
