--- a/src/app/update-room/update-room.component.html
+++ b/src/app/update-room/update-room.component.html
@@ -4,25 +4,29 @@
 <div [hidden]="submitted" style="width: 400px;">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="name">Name</label>
+      <label for="name">Profissional</label>
       <input type="text" class="form-control" id="name" required [(ngModel)]="room.name" name="name">
     </div>
 
     <div class="form-group">
-      <label for="name">date</label>
+      <label for="name">Sala</label>
+      <input type="text" class="form-control" id="numero" required [(ngModel)]="room.numero" name="sala">
+    </div>
+
+    <div class="form-group">
+      <label for="name">Data da locação</label>
       <input type="text" class="form-control" id="date" required [(ngModel)]="room.date" name="date">
     </div>
 
     <div class="form-group">
-      <label for="name">start Hour</label>
+      <label for="name">Horário de Entrada</label>
       <input type="text" class="form-control" id="startHour" required [(ngModel)]="room.startHour" name="startHour">
     </div>
 
     <div class="form-group">
-      <label for="name">end Hour</label>
+      <label for="name">Horário de Saída</label>
       <input type="text" class="form-control" id="endHour" required [(ngModel)]="room.endHour" name="endHour">
     </div>
-
-    <button type="submit" class="btn btn-success">Submit</button>
+    <button type="submit" class="btn btn-success">submit</button>
   </form>
 </div>
