--- a/src/app/room-details/room-details.component.html
+++ b/src/app/room-details/room-details.component.html
@@ -6,7 +6,7 @@
     <label><b> Profissional </b></label> {{room.name}}
   </div>
   <div>
-    <label><b> Sala </b></label> {{room.numero}}
+    <label><b> Sala </b></label> {{room.numero}
   </div>
   <div>
     <label><b> Data da Sublocação</b></label> {{room.date}}
